--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,13 +16,15 @@
 nav {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     grid-area: nav;
+    padding: 20px 70px 10px 70px;
+    overflow: hidden;
 }
 .logo {
-    width: 100px;
-    height:70px;
+    width: 120px;
+    height:80px;
 }
 .img-logo {
     width: 100%;
@@ -36,14 +38,18 @@ nav {
 }
 ul {
     display: flex;
-    background-color: bisque;
 }
 ul li {
     list-style: none;
     margin-right: 20px;
+    font-size: 20px;
+}
+li:hover {
+    background-color: rgba(4, 170, 167, 0.59);
+    border-radius: 20px;
+    padding: 5px;
 }
 button {
-   
     width: 40px;
     height: 50px;
 }
@@ -51,25 +57,71 @@ button {
 .header {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
+    gap: 20px;
     background-color: rgba(4, 170, 167, 0.59);
     grid-area: header;
+    padding: 30px;
 }
 /*Estilos main*/
 .main {
     grid-area: main;
-display: flex;
-    flex-direction: column;
+    display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: bisque;
-
+    gap: 20px;
+    flex-wrap: wrap;
+    background-color: rgba(25, 105, 104, 0.742);
+    padding: 30px;
+}
+.cart {
+    width: 300px;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    gap: 10px;
+    border-radius: 30px 30px 10px 10px;
+    border: solid 1px black;
+    background-color: white;
+}
+.creativo {
+    width: 100%;
+    height: 65%;
+    border-radius: 30px 30px 0px 0px;
+}
+.img-creativo {
+    width: 100%;
+    height: 100%;
+    border-radius: 30px 30px 0px 0px;
+}
+.galeria {
+    display: flex;
+    flex-direction: row;
+}
+.galeria button {
+    width: 20px;
+    height: 20px;
+ color: rgba(25, 105, 104, 1);
+}
+.button-cart {
+    background-color: rgba(72, 208, 208, 0.905);
+    width: 100px;
+    height: 30px;
+    border-radius: 15px;
+    border:darkslategrey solid 1px;
 }
 /*Estilos footer*/
 .footer {
     grid-area: footer;
-    background-color: brown;
+    background-color: rgba(12, 53, 53, 0.742);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 @media (min-width: 576px) {
